# Search-Algorithms

./: AStar.cpp  AStar.h  BestFS.cpp  BestFS.h  BreadthFS.cpp  BreadthFS.h  CMakeLists.txt  CacheManager.h  ClientHandler.cpp  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  GeneralServer.cpp  GeneralServer.h  Matrix.cpp  Matrix.h  MatrixClientHandler.cpp  MatrixClientHandler.h  MatrixSolver.cpp  MatrixSolver.h  MyClientHandler.cpp  MyClientHandler.h  MySerialServer.cpp  MySerialServer.h  ParallelServer.cpp  ParallelServer.h  Point.cpp  Point.h  SearchAlgorithm.cpp  SearchAlgorithm.h  Searchable.h  Searcher.h  Server.cpp  Server.h  SocketCommunication.cpp  SocketCommunication.h  Solver.h  SolverSearcher.h  (+5 more)
